--- a/mystyle.css
+++ b/mystyle.css
@@ -8,7 +8,7 @@ img {
       border-color: #997b93;
       border-radius: 20px;
 }
-ul {
+.links {
       padding: 10px;
       background: rgba(0,0,0,0.5);
     }
