--- a/mystyle.css
+++ b/mystyle.css
@@ -1,14 +1,39 @@
-body {
-	background: #ffcdf5;
-	color: #332931;
-	text-align: center;
-}
-img {
-	  margin: 40px 0px 0px 0px;
-      border-color: #997b93;
+      text-align: center;
+      background: url('https://lh3.google.com/u/0/d/0B-s15ukcfQbYZUd5bkdrMkVZdWs=w1868-h917-iv1');
+      background-size: cover;
+      color: black;
+    }
+    a {
+      color: white;
+    }
+    h1 {
+      font-size: 70px;
+    }
+    img {
+      margin: 40px 0px 0px 0px;
+      border: 7px solid black;
       border-radius: 20px;
-}
-.links {
-      padding: 0px;
+    }
+    ul {
+      padding: 10px;
       background: rgba(0,0,0,0.5);
+    }
+    li {
+      display: inline;
+      padding: 0px 10px 0px 10px;
+    }
+    article {
+      max-width: 500px;
+      padding: 20px;
+      margin: 0 auto;
+    }
+    @media (max-width: 500px) {
+      h1 {
+        font-size: 36px;
+        padding: 5px;
+      }
+      li {
+        padding: 5px;
+        display: block;
+      }
     }
