--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,5 @@
-body{      
-text-align: center;
-      background: url('https://lh3.google.com/u/0/d/0B-s15ukcfQbYZUd5bkdrMkVZdWs=w1868-h917-iv1');
-      background-size: cover;
+ header {
+      text-align: center;
       color: black;
     }
     a {
