--- a/mystyle.css
+++ b/mystyle.css
@@ -10,8 +10,8 @@
     }
     img {
       margin: 40px 0px 0px 0px;
-      border: 7px solid black;
-      border-radius: 20px;
+      border: 40px #997b93;
+      border-radius: 40px;
     }
     ul {
       padding: 10px;
