--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,10 @@
  body {
       text-align: center;
       color: #332931;
+  background:#332931;
     }
     a {
-      color: white;
+      
     }
     h1 {
       font-size: 70px;
