--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,7 @@
  body {
       text-align: center;
       color: #332931;
-  background:#332931;
+  background color:#332931;
     }
     a {
       
