--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,7 @@
  body {
       text-align: center;
       color: #332931;
-  background color:#332931;
+  background:#332931;
     }
     a {
       color: #ffcdf5
@@ -13,6 +13,56 @@
       margin: 40px 0px 0px 0px;
       border: 40px #997b93;
       border-radius: 40px;
+    }
+    ul {
+      padding: 10px;
+      background: rgba(0,0,0,0.5);
+    }
+    li {
+      display: inline;
+      padding: 0px 10px 0px 10px;
+    }
+    article {
+      max-width: 500px;
+      padding: 20px;
+      margin: 0 auto;
+    }
+    @media (max-width: 500px) {
+      h1 {
+        font-size: 36px;
+        padding: 5px;
+      }
+      li {
+        padding: 5px;
+        display: block;
+      }
+    }
+
+
+
+
+
+
+
+
+
+
+header {
+      text-align: center;
+      background: url('https://lh3.google.com/u/0/d/0B-s15ukcfQbYZUd5bkdrMkVZdWs=w1868-h917-iv1');
+      background-size: cover;
+      color: black;
+    }
+    a {
+      color: white;
+    }
+    h1 {
+      font-size: 70px;
+    }
+    img {
+      margin: 40px 0px 0px 0px;
+      border: 7px solid black;
+      border-radius: 20px;
     }
     ul {
       padding: 10px;
