--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,7 @@
  body {
       text-align: center;
-      color: #ffcdf5;
-  background-color: #332931;
+      color: #332931#ffcdf5;
+  background-color: #ffcdf5;
     }
   
     h1 {
