--- a/mystyle.css
+++ b/mystyle.css
@@ -34,4 +34,8 @@
         padding: 5px;
         display: block;
       }
+     .links {
+      display: inline;
+      padding: 0px 10px 0px 10px;
+     }
 
