--- a/mystyle.css
+++ b/mystyle.css
@@ -9,8 +9,9 @@
     }
     img {
       margin: 40px 0px 0px 0px;
-      border: 40px #997b93;
-      border-radius: 40px;
+      border-style:solid;
+      border-width:5px;
+      border-color:#997b93;
     }
     ul {
       padding: 10px;
@@ -38,5 +39,6 @@
         padding: 5px;
         display: block;
       }
+     
  
 
