--- a/mystyle.css
+++ b/mystyle.css
@@ -11,7 +11,8 @@
       border-style: solid;
       border-width: 5px;
       border-color: #997b93;
-      margin: 5px 0px 0px 0px;
+      margin: 40px 0px 0px 0px;
+     border-radius: 20px
     }
     ul {
       padding: 10px;
